--- a/src/app/component/star-rating-widget/star-rating-widget.component.scss
+++ b/src/app/component/star-rating-widget/star-rating-widget.component.scss
@@ -44,7 +44,8 @@
           position: absolute;
           left: 45px;
           right: 45px;
-          display: inline-block;
+          display: flex;
+          align-items: center;
           width: auto;
           height: 1.6em;
           line-height: 1.6em;
